syntax = "proto3";
option go_package = "example_proto_messages/";
package grpc.example;

message Error {
    uint32 code = 1;
    string message = 2;
}

message HelloRequest {
    string email = 1;
    string password = 2;
    string type = 3;
}

message HelloResponse {
    UserData user = 1;
    Error error = 2;
}

message UserData {
    string name = 1;
    uint32 age = 2;
}

service ExampleService {
    rpc HelloWorld(HelloRequest) returns (HelloResponse);
}